<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/select_photo_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    >

    <RelativeLayout
        android:id="@+id/select_span_crop_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.isseiaoki.simplecropview.CropImageView
            android:id="@+id/select_span_crop_img_view"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            custom:cropMode="ratio_1_1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            >
            <Button
                android:id="@+id/select_crop_btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/global_cancel"
                />

            <Button
                android:id="@+id/select_crop_btn_ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/global_ensure"
                />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/select_span_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:paddingRight="30dp"
        android:paddingEnd="30dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        >

        <Button
            android:id="@+id/select_photo_btn_camera"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="55dp"
            android:text="@string/btn_camera"
            android:background="@drawable/list_item_middle_bg_"
            />
        <Button
            android:id="@+id/select_photo_btn_album"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_height="55dp"
            android:text="@string/btn_album"
            android:background="@drawable/list_item_middle_bg_"
            />
        <Button
            android:id="@+id/select_photo_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="15dp"
            android:text="@string/global_cancel"
            android:background="@drawable/list_item_middle_bg_"
            />
    </LinearLayout>
</RelativeLayout>