<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/bill_detail_fragment_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:name="com.assistne.mywallet.fragment.GlobalNavigationFragment"
        tools:layout="@layout/fragment_global_navigation" />

    <ImageView
        android:id="@+id/bill_detail_img_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bill_detail_fragment_navigation"
        android:visibility="gone"
        android:adjustViewBounds="true"
        />
    <RelativeLayout
        android:id="@+id/bill_detail_span_detail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/bill_detail_img_bill"
        android:background="@drawable/bill_bg"
        >

        <ImageView
            android:id="@+id/bill_detail_img_emotion"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:background="@drawable/main_good1"/>

        <TextView
            android:id="@+id/bill_detail_text_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bill_detail_img_emotion"
            android:layout_toEndOf="@id/bill_detail_img_emotion"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textSize="@dimen/font_huge"
            tools:text="购物卡"/>

        <TextView
            android:id="@+id/bill_detail_text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/bill_detail_img_emotion"
            android:layout_toEndOf="@id/bill_detail_img_emotion"
            android:layout_below="@id/bill_detail_text_category"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/font_small"
            android:textColor="@color/gray"
            tools:text="09.10 19:07  香洲区海滨南路"/>


        <TextView
            android:id="@+id/bill_detail_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_centerVertical="true"
            android:textColor="@color/red"
            android:textSize="@dimen/font_huge"
            tools:text="20.00元"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/bill_detail_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large"
        android:background="@drawable/bill_bg"
        android:layout_below="@id/bill_detail_span_detail"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        tools:text="晚饭"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:id="@+id/bill_detail_span_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_add_bill_btn_bg">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_delete"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small"
                android:text="@string/global_delete"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bill_detail_span_share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_add_bill_btn_bg">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small"
                android:text="@string/global_share"/>
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/bill_detail_span_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_add_bill_btn_bg">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/bill_edit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small"
                android:text="@string/global_edit"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>